--- a/炒菜/小炒香干.md
+++ b/炒菜/小炒香干.md
@@ -7,7 +7,7 @@
 - 蒜子
 - 鲜红小米辣
 - 青椒
-- 炒菜基料（生抽、蒸鱼豉油、盐、蚝油等）（老乡鸡官方未给出配比，请依据个人口味适量调整）
+- [炒菜基料](/配料/炒菜基料.md)
 
 ## 步骤：
 - 1. 下入 100g 大豆油、100g 熟猪油、60g 拍蒜、10g 鲜红小米辣，炒出香味；
