--- a/蒸菜/香辣血旺.md
+++ b/蒸菜/香辣血旺.md
@@ -2,7 +2,7 @@
 
 ## 原料: 
 - 鸡血
-- 血旺料（剁椒、香葱、鸡油、蒸鱼豉油、蒜子、生姜等）（老乡鸡官方未给出配比，请依据个人口味适量调整）
+- [血旺料](/配料/血旺料.md)
 
 ## 步骤:
 - 1.取 180g 鸡血置于餐具中，在血旺上均匀倒入 50g 血旺料；
