--- a/炒菜/油渣大白菜.md
+++ b/炒菜/油渣大白菜.md
@@ -6,7 +6,10 @@
 - 鸡油
 - 熟猪油
 - 蒜子
-- 生姜、干红椒、盐、[炒菜基料](/配料/炒菜基料.md)
+- 生姜
+- 干红椒
+- 盐
+- [炒菜基料](/配料/炒菜基料.md)
 
 ## 步骤
 - 1. 下入 100g 鸡油、80g 熟猪油、60g 蒜子、60g 生姜、7g 干红椒，炒出香味；
