--- a/煮锅/嗨嗨锅（泡椒鸡米花米线）.md
+++ b/煮锅/嗨嗨锅（泡椒鸡米花米线）.md
@@ -8,8 +8,8 @@
 - 木耳
 - 海带丝
 - 鸡米花
-- 骨汤调味料（水、猪油、白砂糖、生姜、大葱等）（成都圣恩）
-- 泡椒调味料（泡红椒、泡小米辣、泡姜、泡萝卜、白砂糖等）（成都圣恩）
+- 骨汤调味料（水、猪油、白砂糖、生姜、大葱等）（来自成都圣恩生物）
+- 泡椒调味料（泡红椒、泡小米辣、泡姜、泡萝卜、白砂糖等）（来自成都圣恩生物）
 
 ## 步骤
 
