--- a/炖菜/红烧鱼块.md
+++ b/炖菜/红烧鱼块.md
@@ -1,4 +1,5 @@
 # 红烧鱼块
+> 本文由 AI 配图，欢迎来贡献实拍图。
 
 ## 原料：
 
@@ -11,4 +12,4 @@
 ## 步骤：
 
 - 1. 锅中下入1300g 水、50g 鸡油、10g 盐、700g 红烧鱼块料，大火烧开；
-2. 2. 下入800g 炸制鱼块炖烧7 分钟，出品撒1g 葱花点缀。
+- 2. 下入800g 炸制鱼块炖烧7 分钟，出品撒1g 葱花点缀。
