--- a/炖菜/鸡血汤.md
+++ b/炖菜/鸡血汤.md
@@ -1,4 +1,5 @@
 # 鸡血汤
+> 本文由 AI 配图，欢迎来贡献实拍图。
 
 ## 配料
 - 鸡血
@@ -8,4 +9,7 @@
 
 ## 步骤
 - 30g 鸡血用开水烫制 2 分钟后，冷却备用;
-- 取鸡血、4g 蛋皮、4g 青菜烫制 10 秒后放入汤盅，加入 310g 老鸡汤,葱花点缀出品。
+- 取鸡血、4g 蛋皮、4g 青菜烫制 10 秒后放入汤盅，
+![](pic/鸡血汤/2.jpeg)
+加入 310g 老鸡汤,葱花点缀出品。
+![](pic/鸡血汤/3.jpeg)
