Revise cooking steps for snow vegetable noodles

--- a/主食/雪菜肉丝面.md
+++ b/主食/雪菜肉丝面.md
@@ -13,6 +13,6 @@
 
 ## 步骤
 
-- 1. 将500g 杂粮、2kg 大米清洗干净放入泡米桶，加水至5kg，静置浸泡3 小时；
-- 2. 将浸泡后的米（含水）倒入煮饭锅，加入30g 大豆油，蒸40 分钟，焖10 分钟。
-
+- 1. 面条汤底制做（5 份）：将 250g 西红柿片用 100g 大豆油炒制表皮收缩；加入 2800g 水、140g 汤料、100g 千张丝、400g 雪菜肉丝、75g 炒菜基料大火烧开后煮 2 分钟，备用；
+- 2. 将 275g 手擀面在沸水中煮 3 分钟；
+- 3. 舀取 650g 面条汤底于面碗中，放入煮好的面条，撒 3g 葱花出品。
