feat: support English for Braised Dishes

--- a/en/卤菜/卤大排.md
+++ b/en/卤菜/卤大排.md
@@ -1,14 +1,14 @@
-# 卤大排
+# Braised Pork Chops
 
-![卤大排](/images/卤大排.png)
+![Braised Pork Chops](/images/卤大排.png)
 
-## 配料
+## Ingredients
 
-- 卤料
-- 卤油（大豆油、花椒、辣椒、生姜等）（与卤油都来自成都圣恩、四川新雅轩、四川家佳百味）
-- 油炸大排
+- Braising spices
+- Braising oil (soybean oil, Sichuan pepper, chili, ginger, etc.) (both the braising spices and oil are sourced from Chengdu Sheng'en, Sichuan Xinya Heng, Sichuan Jiajia Baiwei)
+- Deep-fried pork chops
 
-## 步骤
+## Steps
 
-- 1. 在不锈钢桶中放入 5000g 水、500g 卤料和 500g 卤油，大火烧开后，捞出料渣；
-- 2. 解冻后的大排放入卤汤中，大火烧开后转小火卤制 10 分钟，关火焖 5 分钟。
+1. In a stainless steel pot, add 5000g of water, 500g of braising spices, and 500g of braising oil. Bring to a boil over high heat, then remove the spice residue.
+2. Place the defrosted pork chops into the braising broth. Bring to a boil over high heat, then simmer over low heat for 10 minutes. Turn off the heat and let it steep for 5 minutes.
