--- a/en/卤菜/卤翅根.md
+++ b/en/卤菜/卤翅根.md
@@ -1,15 +1,15 @@
-# 卤翅根
+# Braised Chicken Wings
 
-![卤翅根](/images/卤翅根.png)
+![Braised Chicken Wings](/images/卤翅根.png)
 
-## 配料
+## Ingredients
 
-- 卤料
-- 卤油（大豆油、花椒、辣椒、生姜等）（同卤料来自成都圣恩、四川新雅轩、四川家佳百味）
-- 鸡翅根
+- Braising spices
+- Braising oil (soybean oil, Sichuan pepper, chili, ginger, etc.) (both the braising spices and oil are sourced from Chengdu Sheng'en, Sichuan Xinya Heng, Sichuan Jiajia Baiwei)
+- Chicken wings
 
-## 步骤
+## Steps
 
-- 1. 解冻后的鸡翅根焯水，捞出备用；
-- 2. 在不锈钢桶中放入 5000g 水、500g 卤料和 500g 卤油，大火烧开后，捞出料渣，备用；
-- 3. 卤汤中下入鸡翅根，大火烧开后转小火卤 20 分钟，关火焖 10 分钟。
+1. Blanch the defrosted chicken wings in boiling water, then remove and set aside.
+2. In a stainless steel pot, add 5000g of water, 500g of braising spices, and 500g of braising oil. Bring to a boil over high heat, then remove the spice residue.
+3. Add the chicken wings to the braising broth. Bring to a boil over high heat, then simmer over low heat for 20 minutes. Turn off the heat and let it steep for 10 minutes.
