--- a/en/卤菜/卤方干.md
+++ b/en/卤菜/卤方干.md
@@ -1,14 +1,14 @@
-# 卤方干
+# Braised Tofu Blocks
 
-![卤方干](/images/卤方干.png)
+![Braised Tofu Blocks](/images/卤方干.png)
 
-## 配料
+## Ingredients
 
-- 卤料
-- 卤油（大豆油、花椒、辣椒、生姜等）（与卤油都来自成都圣恩、四川新雅轩、四川家佳百味）
-- 方干
+- Braising spices
+- Braising oil (soybean oil, Sichuan pepper, chili, ginger, etc.) (both the braising spices and oil are sourced from Chengdu Sheng'en, Sichuan Xinya Heng, Sichuan Jiajia Baiwei)
+- Tofu blocks
 
-## 步骤
+## Steps
 
-- 1. 在不锈钢桶中放入 5000g 水、500g 卤料和 500g 卤油，大火烧开后，捞出料渣；
-- 2. 方干放入卤汤中，大火烧开后转小火卤制 5 分钟，关火焖 10 分钟。
+1. In a stainless steel pot, add 5000g of water, 500g of braising spices, and 500g of braising oil. Bring to a boil over high heat, then remove the spice residue.
+2. Place the tofu blocks into the braising broth. Bring to a boil over high heat, then simmer over low heat for 5 minutes. Turn off the heat and let it steep for 10 minutes.
