--- a/en/卤菜/嗨嗨桶（红油串串）.md
+++ b/en/卤菜/嗨嗨桶（红油串串）.md
@@ -1,16 +1,16 @@
-# 嗨嗨桶（红油串串）
+# Spicy Hot Pot Skewers
 
-![嗨嗨桶（红油串串）](/images/嗨嗨桶（红油串串）.png)
+![Spicy Hot Pot Skewers](/images/嗨嗨桶（红油串串）.png)
 
-## 配料
+## Ingredients
 
-- 钵钵鸡红油（藤椒油、辣椒油、辣椒等）
-- 钵钵鸡汤料（与钵钵鸡红油均来自成都圣恩）
-- 白芝麻
-- 钵钵鸡串串（鸡翅尖、牛肉、鸡肉、腊肠、豆干、海带、杏鲍菇、千张、木耳、豆皮）（杭州喜牛哥）
+- Spicy hot oil (pepper oil, chili oil, etc.)
+- Spicy hot broth base (both the oil and broth base are sourced from Chengdu Sheng'en)
+- White sesame seeds
+- Assorted skewers (chicken wings, beef, chicken, pork intestines, tofu, kelp, mushrooms, etc.) (from Hangzhou Xi Niu Ge)
 
-## 步骤
+## Steps
 
-- 1. 钵钵鸡汤底：锅中加入 2000g 水，放入 320g 钵钵鸡汤底料、450g 钵钵鸡红油、60g 白芝麻，搅拌均匀，备用；
-- 2. 将解冻好的 10 串钵钵鸡串串，焯水 1 分 30 秒；
-- 3. 将串串浸泡在钵钵鸡汤底中，小火烧开后焖 5 分钟。
+1. Prepare the spicy hot broth: In a pot, add 2000g of water, 320g of spicy hot broth base, 450g of spicy hot oil, and 60g of white sesame seeds. Mix well and set aside.
+2. Blanch 10 skewers of assorted ingredients in boiling water for 1 minute and 30 seconds.
+3. Soak the skewers in the spicy hot broth. Simmer over low heat for 5 minutes.
