fix: routes of seasonings in English

--- a/en/主食/雪菜肉丝面.md
+++ b/en/主食/雪菜肉丝面.md
@@ -10,7 +10,7 @@
 - Tomatoes
 - Shredded dried bean curd
 - Soybean oil
-- [Stir - fry base material](/配料/炒菜基料.md)
+- [Stir - fry base material](/en/配料/炒菜基料.md)
 - Chopped scallions
 
 ## Steps
