--- a/en/主食/香辣鸡丁拌面.md
+++ b/en/主食/香辣鸡丁拌面.md
@@ -10,7 +10,7 @@
 - Fresh red bird's - eye chili
 - Long green chili peppers
 - Garlic cloves
-- [Stir - fry base material](/配料/炒菜基料.md)
+- [Stir - fry base material](/en/配料/炒菜基料.md)
 - Soybean oil
 - Base sauce (soy sauce, water, Chinese prickly ash oil, garlic, etc.) (from Chengdu Shengen Biology)
 - Tossed - vegetable chili oil
