--- a/en/汤/肥西老母鸡汤（单品）.md
+++ b/en/汤/肥西老母鸡汤（单品）.md
@@ -5,7 +5,7 @@
 ## Ingredients
 
 - Feixi old hen
-- [Chicken oil seasoning](/配料/鸡油料.md)
+- [Chicken oil seasoning](/en/配料/鸡油料.md)
 - Water
 - Salt
 
