--- a/en/炒菜/农家小炒肉（玉耳）.md
+++ b/en/炒菜/农家小炒肉（玉耳）.md
@@ -10,7 +10,7 @@
 - Salt
 - Garlic
 - Soybean oil
-- [Stir-Fried Pork Seasoning Sauce](/配料/小炒肉调味汁.md)
+- [Stir-Fried Pork Seasoning Sauce](/en/配料/小炒肉调味汁.md)
 
 ## Steps
 
