--- a/en/炒菜/家常土豆片.md
+++ b/en/炒菜/家常土豆片.md
@@ -5,7 +5,7 @@
 ## Ingredients
 
 - Potato (yellow heart)
-- [炒菜基料](/配料/炒菜基料.md)
+- [炒菜基料](/en/配料/炒菜基料.md)
 - Soybean oil
 - Garlic
 - Dried red pepper
