--- a/en/炒菜/家常小炒.md
+++ b/en/炒菜/家常小炒.md
@@ -9,7 +9,7 @@
 - fungus
 - Conditioning shredded meat (back seat meat, salt, dark soybean oil, etc.) (Slice and roll knead in the central kitchen of Laoxiang chicken, detailed ingredients and ratios Laoxiang chicken is not announced, please adjust it according to your personal taste)
 - Shredded carrots
-- [家常小炒料](/配料/家常小炒料.md)
+- [家常小炒料](/en/配料/家常小炒料.md)
 - Garlic
 - Soybean oil
 - Smoked
