--- a/en/炒菜/小炒鸡丁.md
+++ b/en/炒菜/小炒鸡丁.md
@@ -6,7 +6,7 @@
 
 - Green pepper
 - Dice chicken (boneless chicken leg meat)
-- [调味料](/配料/调味料（小炒鸡丁）.md)
+- [调味料](/en/配料/调味料（小炒鸡丁）.md)
 - Smoked
 - Garlic
 - Bright red millet spicy
