--- a/en/炒菜/笋子鸡丁盖饭.md
+++ b/en/炒菜/笋子鸡丁盖饭.md
@@ -5,7 +5,7 @@
 ## Ingredients
 
 - Dice chicken (boneless chicken leg meat)
-- [剁椒酱](/配料/剁椒酱.md)
+- [剁椒酱](/en/配料/剁椒酱.md)
 - Arhat bamboo shoots
 - Tea eggs
 - Vegetable moss
