--- a/en/炒菜/肥肠鸡.md
+++ b/en/炒菜/肥肠鸡.md
@@ -9,7 +9,7 @@
 - Ginger
 - Garlic cloves
 - Spring onion
-- [Fatty Intestine Chicken Sauce](/配料/肥肠鸡酱料.md)
+- [Fatty Intestine Chicken Sauce](/en/配料/肥肠鸡酱料.md)
 - Rendered lard
 - Soybean oil
 - Fatty Intestine Chicken Pickled Vegetables Pack (white radish, cowpea, mustard greens, Erjing chili, wild mountain pepper) (from Sichuan Minfuji)
