--- a/en/炒菜/芋儿鸡.md
+++ b/en/炒菜/芋儿鸡.md
@@ -8,7 +8,7 @@
 - Ginger
 - Garlic cloves
 - Beijing scallions
-- [Intestine - chicken sauce](/配料/肥肠鸡酱料.md)
+- [Intestine - chicken sauce](/en/配料/肥肠鸡酱料.md)
 - Cooked lard
 - Rapeseed oil
 - Intestine - chicken pickled vegetable pack (white radish, cowpeas, leaf mustard, Erjingtiao peppers, wild mountain peppers) (from Sichuan Minfuji)
