--- a/en/蒸菜/竹笋蒸鸡翅.md
+++ b/en/蒸菜/竹笋蒸鸡翅.md
@@ -6,7 +6,7 @@
 
 - Chicken wings (chicken middle wings, chicken wing roots)
 - Shrimp bamboo shoots
-- [鸡翅调料](/配料/鸡翅调料.md)
+- [鸡翅调料](/en/配料/鸡翅调料.md)
 
 ## step
 
