--- a/en/蒸菜/风干牛肉蒸白干.md
+++ b/en/蒸菜/风干牛肉蒸白干.md
@@ -6,7 +6,7 @@
 
 - Dried beef (beef brisket) (from Beijing Hongrui, Jiangsu Henggu, Jiangsu Zijing Huamei Industry)
 - Dry in vain
-- [风干牛肉酱料](/配料/风干牛肉酱料.md)
+- [风干牛肉酱料](/en/配料/风干牛肉酱料.md)
 - water
 
 ## step
