--- a/en/炖菜/白菜炖豆腐.md
+++ b/en/炖菜/白菜炖豆腐.md
@@ -8,14 +8,14 @@
 
 - Tofu
 - Chinese cabbage
-- [炒菜基料](/配料/炒菜基料.md)
+- [炒菜基料](/en/配料/炒菜基料.md)
 - Cooked lard
 
 ## step:
 
 - 1. Add 50g soybean oil, 70g cooked lard, and 30g garlic to stir-fry to bring out the aroma;
-  ![](pic/白菜炖豆腐/1.jpeg)
+     ![](pic/白菜炖豆腐/1.jpeg)
 - 2. Add 900g of water, 1 bag, 3 boxes of tofu, and stew and cook to taste;
-  ![](pic/白菜炖豆腐/2.jpeg)
+     ![](pic/白菜炖豆腐/2.jpeg)
 - 3. Add 800g of cabbage, bring to a boil, turn to low heat, and stew again and add to the flavor.
-  ![](pic/白菜炖豆腐/3.jpeg)
+     ![](pic/白菜炖豆腐/3.jpeg)
